--- a/KLF.html
+++ b/KLF.html
@@ -98,8 +98,8 @@
 </header>
 <div id="main-navigation" class="">
     <div class="container">
-        <div class="navbar-lapse lapse" data-hover="dropdown">
-            <nav role="navigation">
+        <div class="row navbar-lapse lapse" data-hover="dropdown">
+            <nav role="navigation" class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="menu nav navbar-nav">
                     <li class="first expanded dropdown active">
                         <a href="#" title="" data-target="#" class="dropdown-toggle active" data-toggle="dropdown">
@@ -381,7 +381,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="more-link">
+                            <div class="more-link clearfix">
                                 <a href="#events">View all grants </a>
                             </div>
                             <div class="view-footer">
@@ -405,13 +405,11 @@
                                             <div about="/project/white-paper-law-social-body-and-land-occupation"
                                                  typeof="sioc:Item foaf:Document"
                                                  class="ds-1 node node-project node-promoted node-teaser node-featured view-mode-teaser clearfix">
-
                                                 <div class="field-banner">
                                                     <a href="#project/white-paper-law-social-body-and-land-occupation"><img
                                                             typeof="foaf:Image" class="img-responsive"
                                                             src="./KLF_files/ahb-klp02v3-04-casco13mei-118-_web(1).jpg"
                                                             width="220" height="220" alt=""></a></div>
-
                                                 <div class="field-title">
                                                     <h2>
                                                         <a href="#project/white-paper-law-social-body-and-land-occupation">White
