--- a/KLF.html
+++ b/KLF.html
@@ -96,11 +96,12 @@
         </button>
     </div>
 </header>
+
 <div id="main-navigation" class="">
     <div class="container">
         <div class="row navbar-lapse lapse" data-hover="dropdown">
-            <nav role="navigation" class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="menu nav navbar-nav">
+            <nav role="navigation" class="navbar" id="bs-example-navbar-collapse-1">
+                <ul class="menu nav nav-justified">
                     <li class="first expanded dropdown active">
                         <a href="#" title="" data-target="#" class="dropdown-toggle active" data-toggle="dropdown">
                             The Foundation <span class="caret"></span>
@@ -246,9 +247,10 @@
         </section>
     </div>
 </div>
-<div id="main-content" class="container">
+
+<div id="main-content" class="row">
     <div class="main-container">
-        <div class="">
+        <div class="container">
             <section class="col-sm-12">
                 <div class="region region-content">
                     <section id="block-views-events-block" class="block block-views clearfix">
@@ -381,14 +383,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="more-link clearfix">
+                            <!--<div class="more-link clearfix">
                                 <a href="#events">View all grants </a>
                             </div>
                             <div class="view-footer">
                                 The Kamel Lazaar Foundation regularly supports, in partnership with its publishing
                                 initiative Ibraaz, symposia, exhibitions, research workshops, seminars and other
                                 cultural events.
-                            </div>
+                            </div>-->
                         </div>
                     </section>
                     <section id="block-views-projects-block" class="block block-views clearfix">
@@ -464,13 +466,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="more-link">
+                            <!--<div class="more-link">
                                 <a href="#projects">View all fellowship</a>
                             </div>
                             <div class="view-footer">
                                 The Kamel Lazaar Foundation is committed to providing a research forum for visual
                                 culture in the Maghreb and Middle Eastern region.
-                            </div>
+                            </div>-->
                         </div>
                     </section>
                     <section id="block-views-initiatives-block" class="block block-views clearfix">
@@ -568,7 +570,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="more-link">
+                            <!--<div class="more-link">
                                 <a href="#initiatives"> Read more </a>
                             </div>
                             <div class="view-footer">
@@ -576,7 +578,7 @@
                                 visual culture across the Maghreb, including assistance for print publications, in
                                 conjunction with Ibraaz, and for artists to produce research relating to their practice,
                                 artworks and cultural events.
-                            </div>
+                            </div>-->
                         </div>
                     </section>
                     <section id="block-views-collection-block" class="block block-views clearfix">
@@ -656,14 +658,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="more-link">
+                            <!--<div class="more-link">
                                 <a href="#collection">Bse the collection</a>
                             </div>
                             <div class="view-footer">
                                 The Kamel Lazaar Foundation has an extensive collection of contemporary art from the
                                 Maghreb and Middle East, dating from the 1950s onwards. The collection is organised online
                                 so as to provide a research tool for cultural practitioners.
-                            </div>
+                            </div>-->
                         </div>
                     </section>
                 </div>
@@ -731,6 +733,7 @@
         </div>
     </div>
 </footer>
+
 <div class="container-fluid" id="copyright">
     © 2016 Kamel Lazaar Foundation - Developed by <a href="http://www.uteek.net/">UTEEK</a>
 </div>
